[package]
name = "vanity_project"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
rusqlite = { version = "0.29", features = ["bundled"] }
ssh2 = "0.9"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
structopt = "0.3"
secp256k1 = { version = "0.27", features = ["rand", "rand-std"] }
tiny-keccak = "2.0"
rayon = "1.7"
regex = "1.9"
num_cpus = "1.16"
rand = "0.8"